# locatr

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.ini  Makefile  README.md  cache.go  cdp.go  cohereReRanker.go  constants.go  doc.go  element_spec_test.go  errors.go  generate.go  go.mod  go.sum  htmlChunkSpliter.go  ipc.proto  llm.go  locator.py  locatr.go  locatr_test.go  logger.go  main.go  main.wasm  playwright.go  plugin.go  pyproject.toml  selenium.go  types.go  utils.go  utils_test.go
.github/workflows/: golang_test.yaml  main.yaml  python_test.yaml  test.yaml
benchmarking/: README.md  compare.py  compareInject.js  fetch_evals.py  grounding_locatr.py  locatr.go  locatrInject.js  pyproject.toml
benchmarking/schema/eval/: docs_aws_amazon_com_signin_latest_userguide_how_to_sign_in_html.yaml  en_wikipedia_org_wiki_quora.yaml  github_com.yaml  hub_docker_com.yaml  mkinf_io.yaml  store_steampowered_com.yaml  www_airbnb_co_in.yaml  www_amazon_com.yaml  www_bigbasket_com.yaml  www_figma_com.yaml  www_geico_com.yaml  www_google_com_maps__22_5738752_88_3326976_14z.yaml  www_makemytrip_com.yaml  www_notion_com.yaml
benchmarking/schema/results/anthropic_grounding/: calendly_com.yaml  docs_aws_amazon_com_signin_latest_userguide_how_to_sign_in_html.yaml  en_wikipedia_org_wiki_quora.yaml
benchmarking/schema/results/original_locatr/: calendly_com.yaml  docs_aws_amazon_com_signin_latest_userguide_how_to_sign_in_html.yaml  en_wikipedia_org_wiki_quora.yaml
benchmarking/schema/results/os_atlas_grounding/: calendly_com.yaml  docs_aws_amazon_com_signin_latest_userguide_how_to_sign_in_html.yaml
cmd/server/: main.go
core/: elementSpec.go  element_spec_test.go  llm.go  locatr.go  locatr_test.go  playwright.go  plugin.go  utils.go  utils_test.go
core/meta/: htmlMinifier.js
eval/: app.py  main.go  models.go  utils.go
eval/99bikes/: main.go
eval/appium/: calculator.yaml  clock.yaml
eval/bigbasket/: main.go
eval/evalFiles/: bigbasket.yaml  docker_hub.yaml  flipkart.yaml  geico.yaml  makemytrip.yaml  ubuynepal.yaml  ycombinator.yaml
eval/files/: 99bikes.yaml  dockerhub.yaml  flipkart.yaml  github.yaml  makemytrip.yaml  steam.yaml  ycombinator.yaml
eval/flipkart/: main.go
eval/interactive/: .env.example  README.md  convert.py  evaluator.go  go.mod  go.sum  inject.js  render.py  rendered_results_20250221_062645.md  results_20250221_062645.jsonl  results_20250222_213800.csv  results_20250222_213800.jsonl  results_20250222_213800.md  urls.txt
eval/jackphelanchevy/: main.go
eval/makemytrip/: main.go
eval/results/: 99bikes.yaml-dom-analysis.csv  99bikes.yaml-visual-analysis.csv  steam.yaml-dom-analysis.csv  steam.yaml-visual-analysis.csv
examples/: docker_hub.go
examples/appium/: main.go
examples/cdp/: main.go
examples/default-llm-client/: main.go
examples/dockerhub/: docker_hub.go
examples/github/: github.go
examples/python/: app.py  appium.py  connect-over-cdp.py  example_async.py  generic_example.py  playwright.py  selenium.py
examples/rerank/: main.go
examples/selenium/: main.go
examples/steam/: steam.go
examples/test/: main.go
ffi/: main.go
golang/: appium.go  appiumClient.go  baseLocatr.go  baseLocatr_test.go  cdp.go  constants.go  element_spec_test.go  httpClient.go  internal.go  locatr.go  logger.go  playwright.go  types.go  utils.go  xmlparser.go
golang/appium/: appium.go  appiumClient.go  httpClient.go  xmlMinifier.go  xmlMinifier_test.go  xmlparser.go
golang/baseLocatr/: locatr.go  locatr_test.go
golang/cdp/: cdp.go
golang/constants/: constants.go
golang/elementSpec/: elementSpec.go  element_spec_test.go
golang/llm/: llm.go  llm_test.go
golang/logger/: logger.go
golang/logging/: logging.go
golang/meta/: htmlMinifier.js
golang/minifier/: adapter.go  xmlMinifier.go  xmlMinifier_test.go  xpath.go
golang/mode/: dom-analysis.go  dom-analysis_test.go  visual-analysis.go  visual-analysis_test.go
golang/options/: options.go
golang/playwrightLocatr/: playwright.go
golang/plugins/: appium.go  playwright.go  selenium.go
golang/rawxml/: rawxmllocator.go  rawxmlplugin.go
golang/reranker/: cohere.go  cohereReRanker.go  htmlChunkSpliter.go  htmlChunkSplitter_test.go  reranker.go
golang/seleniumLocatr/: selenium.go
golang/tracing/: config.go  defaults.go  trace.go
golang/types/: common.go  completion.go  dom.go  elementSpec.go  locatr.go  plugin.go  (+1 more)
ipc/: handler.go  plugin.go  server.go  types.go
ipc/python_client/: pyproject.toml
ipc/python_client/locatr/: __init__.py  _utils.py  exceptions.py
ipc/python_client/tests/: test_locatr.py
llm/: llm.go
locatr/: config.go  elementSpec.go  locatr.go  locatr_test.go  plugin.go  utils.go  utils_test.go
locatr_py/: _c_functions.py  constants.py  exceptions.py  main.py  options.py
meta/: htmlMinifier.js  locate_element.prompt
pkg/: locatr.go
plugins/: grpc.go  playwright.go  wasm.go
python_client/: README.md  __init__.py  _constants.py  _locatr.py  _utils.py  exceptions.py  schema.py
rpc/: server.go
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/locatr/: __main__.py  ipc.py  locatr.py
server/: errors.go  main.go  schemas.go  utils.go
(+60 files in other folders)
