[project]
name = "benchmarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "anthropic>=0.45.2",
    "gradio-client>=1.7.0",
    "json-repair>=0.37.0",
    "pillow>=11.1.0",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "supabase>=2.13.0",
]
