[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["locatr"]

[tool.hatch.build.targets.sdist]
include = [
	"locatr/bin/locatr.bin",
	"locatr",
]
ignore-vcs = true
exclude = [
	"*.cache"
]

[project]
name = "test_locatr"
version = "0.42.0"
description = "Get HTML/XML elements css/xpath selectors using natural language."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.4",
]
authors = [{ name = "Neeraj319", email = "neeraj@vertexcover.io"}]
include = [
    "LICENSE",
    "locatr/bin/locatr.bin"
]
license = "MIT"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["locatr"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

